--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <body>
   <h1>LinkedIn Insight Tag Test Page</h1>
   <p>If you see this, the page is published.</p>
-
+<script type="text/javascript">
+  (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
+  (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
+  e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
+  })(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
+  
+  _st('install','J6qMEiogRCgovcHNJTFS','2.0.0');
+</script>
   <!-- === Replace the block below with your LinkedIn Insight Tag snippet === -->
   <!-- Paste the exact JS snippet you copied from LinkedIn Campaign Manager here -->
   <script>
